# azuki

./: .gitignore  Cargo.toml  out  readme.md
.github/workflows/: gh_pages.yml
book/: 404.html  index.html  preface.html  print.html  searchindex.js  searchindex.json
book/lab/: lab1-guide.html  lab1.html  lab2-guide.html  lab2.html  lab3.html  lab4-ex.html  lab4-guide.html  lab4.html  lab5.html
book/tac/: AzukiTac.g4  tac-definition.html
crates/opt/: Cargo.toml
crates/opt/src/: branching_simplify.rs  const_folding.rs  dead_code_eliminator.rs  lib.rs  loop_unroll.rs  util.rs
crates/opt/src/util/: graphs.rs
crates/syntax/: Cargo.toml
crates/tac/: Cargo.toml  build.rs  lib_azuki_tac.h
crates/tac-filetest/: Cargo.toml
crates/tac/src/: builder.rs  containers.rs  err.rs  ffi.rs  lib.rs  linkedlist.rs  serde.rs  ty.rs
crates/tac/src/builder/: func_editor.rs  mod.rs
crates/tac/src/ffi/: mod.rs  tac.rs
crates/tac/src/formatter/: mod.rs
crates/tac/src/linkedlist/: implementation.rs  test.rs
crates/tac/src/optimizer/: mod.rs  sanity_checker.rs
crates/tac/src/parser/: implementation.rs  lexer.rs  mod.rs
crates/tac/src/ty/: registry.rs
crates/tac/src/util/: format_list.rs  idx.rs  iterator.rs  mod.rs  visit_bb.rs
crates/tacgen/: Cargo.toml
crates/tacgen/src/: err.rs  lib.rs  symbol.rs  test.rs
crates/vm/: Cargo.toml
crates/vm/src/: inspector.rs  lib.rs  test.rs  value.rs
doc/: search-index.js  settings.html  source-files.js
doc/anymap/: all.html  enum.Entry.html  index.html  struct.Map.html  struct.OccupiedEntry.html  struct.VacantEntry.html  type.AnyMap.html
doc/azuki/: all.html  fn.default_opts.html  fn.main.html  index.html  sidebar-items.js
doc/azuki_opt/: all.html  index.html  sidebar-items.js
doc/azuki_syntax/: all.html  fn.parse.html  index.html  sidebar-items.js
doc/azuki_tac/: all.html  enum.BinaryOp.html  enum.Branch.html  enum.InstKind.html  enum.Value.html  index.html  sidebar-items.js  struct.BasicBlock.html  struct.BinaryInst.html  struct.FunctionCall.html  struct.Inst.html  struct.ItemsIter.html  struct.Program.html  struct.Tac.html  struct.TacFunc.html  trait.ImplicitLinkedList.html  trait.ImplicitLinkedListGet2.html  trait.ImplicitLinkedListItem.html  type.Immediate.html
doc/azuki_tac_filetest/: all.html  index.html
doc/azuki_tacgen/: all.html  fn.assert_type_eq.html  fn.compile.html  fn.empty_jump_target.html  index.html  sidebar-items.js  struct.BreakTarget.html  struct.FuncCompiler.html
doc/azuki_tacvm/: all.html  enum.CurrInst.html  enum.JumpAction.html  index.html  sidebar-items.js  struct.Frame.html  struct.Vm.html
doc/azvm/: all.html  fn.main.html  index.html  sidebar-items.js  struct.InstCounter.html  struct.Opt.html
doc/beef/: all.html  index.html  type.Cow.html
doc/chrono/: struct.Duration.html
doc/clap/: all.html  enum.AppSettings.html  enum.ArgSettings.html  enum.ErrorKind.html  enum.ValueHint.html  index.html  macro.app_from_crate.html  macro.clap_app.html  macro.crate_authors.html  macro.crate_description.html  macro.crate_name.html  macro.crate_version.html  struct.App.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Error.html  struct.Indices.html  struct.OsValues.html  struct.Values.html  trait.ArgEnum.html  trait.Clap.html  trait.FromArgMatches.html  trait.IntoApp.html  trait.Subcommand.html  type.Result.html
doc/clap_derive/: all.html  derive.ArgEnum.html  derive.Clap.html  derive.IntoApp.html  derive.Subcommand.html  index.html
doc/combine/: all.html  enum.ParseResult.html  fn.any.html  fn.attempt.html  fn.between.html  fn.chainl1.html  fn.chainr1.html  fn.choice.html  fn.count.html  fn.count_min_max.html  fn.eof.html  fn.from_str.html  fn.look_ahead.html  fn.many.html  fn.many1.html  fn.none_of.html  fn.not_followed_by.html  fn.one_of.html  fn.optional.html  fn.parser.html  fn.position.html  fn.produce.html  fn.satisfy.html  fn.satisfy_map.html  fn.sep_by.html  fn.sep_by1.html  fn.sep_end_by.html  fn.sep_end_by1.html  fn.skip_count.html  fn.skip_count_min_max.html  fn.skip_many.html  fn.skip_many1.html  fn.token.html  fn.tokens.html  fn.tokens_cmp.html  fn.unexpected.html  fn.unexpected_any.html  fn.value.html  index.html  macro.choice.html  (+15 more)
doc/enum_as_inner/: all.html  derive.EnumAsInner.html  index.html
doc/lexpr/: all.html  enum.Value.html  fn.from_reader.html  fn.from_reader_custom.html  fn.from_slice.html  fn.from_slice_custom.html  fn.from_str.html  fn.from_str_custom.html  fn.to_string.html  fn.to_string_custom.html  fn.to_vec.html  fn.to_vec_custom.html  fn.to_writer.html  fn.to_writer_custom.html  index.html  macro.sexp.html  sidebar-items.js  (+6 more)
docs/: book.toml  readme.md
resource/: fib.c0  fib.tac
src/: main.rs  opt.rs
(+1846 files in other folders)
