[package]
authors = ["Rynco Maekawa <lynzrand@outlook.com>"]
edition = "2018"
name = "azuki"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azuki-syntax = {path = "crates/syntax"}
azuki-tac = {path = "crates/tac"}
azuki-tacgen = {path = "crates/tacgen"}

[workspace]
members = [
  ".",
  "./crates/syntax",
  "./crates/tac",
  "./crates/tacgen",
]
