[package]
authors = ["Rynco Maekawa <lynzrand@outlook.com>"]
edition = "2018"
name = "azuki-opt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = "0.12"
azuki-tac = { path = "../tac" }
petgraph = "0.5"
bit-set = "0.5.2"
tracing = "0.1.25"
smallvec = "1.6"
