[package]
authors = ["Rynco Maekawa <lynzrand@outlook.com>"]
edition = "2018"
name = "azuki-tac"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.2"
indexmap = "1"
lexpr = "0.2.6"
petgraph = "0.5"
smol_str = "0.1"
thunderdome = "0.4"
tinyvec = {version = "1", features = ["alloc"]}
