[package]
authors = ["Rynco Maekawa <lynzrand@outlook.com>"]
edition = "2018"
name = "azuki-tac"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = "0.12"
bit-set = "0.5.2"
combine = { version = "4.5", optional = true }
enum-as-inner = "0.3"
indexmap = "1"
num = { version = "0.4", optional = true }
petgraph = { version = "0.5", optional = true }
smol_str = "0.1"
thunderdome = "0.4"
tinyvec = { version = "1", features = ["alloc"] }

[features]
default = ["parser"]
parser = ["combine", "num"]
visit = ["petgraph"]
