[package]
authors = ["Rynco Maekawa <lynzrand@outlook.com>"]
edition = "2018"
name = "azuki-tacgen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azuki-syntax = {path = "../syntax"}
azuki-tac = {path = "../tac"}
bit-set = "0.5.2"
smol_str = "0.1"
vec1 = "1.6"

[dev-dependencies]
